- various updates:
    * added preview functionality when submitting new content (such as a story) from the administration pages.
    * made the administration section only show those links a user has access to.
    * improved account module:
        + added "acess control" to allow/deny certain usernames/e-mail addresses/hostnames
    * improved comment module
    * improved story module:
        + added preview functionality for administrators
        + made it possible to permanently delete stories
    * improved themes:
        + W3C validation on a best effort basis
        + removed $theme->control() from themes
        + added theme "goofy"
- revised documentation

drupal 2.00, 15/03/2001
-----------------------
- rewrote the comment/discussion code:
    * comment navigation should be less confusing now
    * additional/alternative display and order methods have been added.
    * modules can be extended with a "comment system": modules can embed the existing comment system without having to write their own, duplicate comment system.
- added sections and section manager:
    * story sections can be maintained from the administration pages.
    * story sections make the open submission more adaptive in that you can set individual post, dump and expiration thresholds for each section according to the story type and urgency level: stories in certain sections do not "expire" and might stay interesting and active as time passes by, whereas news-related stories are only considered "hot" over a short period of time.
- multiple vhosts + multiple directories:
    * you can setup multiple drupal sites on top of the same physical source tree either by using vhosts or sub-directories
- added "user ratings" similar to SlashCode's karma or Scoop's mojo:
    * all rating logic is packed into a module to ease experimenting with different rating heuristics/algorithms.
- added "search infrastructure":